Updated several files

--- a/Website/nasatv.html
+++ b/Website/nasatv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Manila Mission Control</title>
+	<title>MMC | NASA TV</title>
 	<link rel="stylesheet" type="text/css" href="Resources/nasatv.css">
 	<link rel="icon" type="image/png" href="Resources/Images/MMClogo.png">
 	<meta name="viewport" content="width=device-width" />
