--- a/Website/portal.html
+++ b/Website/portal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Manila Mission Control</title>
+	<title>MMC | Portal</title>
 	<link rel="stylesheet" type="text/css" href="Resources/NASAlaunch.css">
 	<link rel="icon" type="image/png" href="Resources/Images/MMClogo.png">
 	<meta name="viewport" content="width=device-width" />
@@ -41,7 +41,7 @@
 		<a href="satellite.html">
 			<img class="sectionimage right" src="Resources\Images\Sections\Section2.jpg"\>
 		</a>
-		<a href="section3.html">
+		<a href="https://www.nasa.gov/news/releases/latest/">
 			<img class="sectionimage leftimage" src="Resources\Images\Sections\Section3.jpg"\>
 		</a>
 		<a href="vr.html">
@@ -50,7 +50,7 @@
 		<a href="nasatv.html">
 			<img class="sectionimage leftimage" src="Resources\Images\Sections\Section5.jpg"\>
 		</a>
-		<a href="section6.html">
+		<a href="about.html">
 			<img class="sectionimage right" src="Resources\Images\Sections\Section6.jpg"\>
 		</a>
 	</div>
