--- a/Website/satellite.html
+++ b/Website/satellite.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Manila Mission Control</title>
+	<title>MMC | Satellite Map</title>
 	<link rel="stylesheet" type="text/css" href="Resources/NASAlaunch.css">
 	<link rel="icon" type="image/png" href="Resources/Images/MMClogo.png">
 	<meta name="viewport" content="width=device-width" />
@@ -16,18 +16,6 @@
 				speed: 2500
 			});
 		});
-		function Redirect() {
-               window.location="http://localhost/TAMAHACK/registration.php";
-               //window.location="https://google.com";
-               //window.location.replace("http://localhost/TAMAHACK/registration.php");
-
-        }
-        function Redirect2() {
-               window.location="http://localhost/TAMAHACK/project6.php";
-               //window.location="https://google.com";
-               //window.location.replace("http://localhost/TAMAHACK/registration.php");
-
-        }
 	</script>
 	<link rel="stylesheet" type="text/css" href="Resources/textrotator.css" />
 </head>
