--- a/Website/section1.html
+++ b/Website/section1.html
@@ -16,7 +16,7 @@
 			});
 		});
 		function Redirect() {
-               window.location="http://localhost/SPACEAPPS/portal.html";
+               window.location="portal.html";
         }
 		$(function() {
 			$(".buttspecial").click(function() {
