--- a/Website/portal.html
+++ b/Website/portal.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<div id="fullwidth" style="height: 65px;">
-		<h1 style="display: inline;"> <a href="http://localhost/SPACEAPPS/index.html"><img id="logo" src="Resources\Images\MMCwordmark.png"\></a></h1>
+		<h1 style="display: inline;"> <a href="index.html"><img id="logo" src="Resources\Images\MMCwordmark.png"\></a></h1>
 	</div>
 	<header id="header1" style="background: url(Resources/Images/liftoff.jpg); background-attachment: fixed; background-size: cover; height: 600px">
 		<div id="leftcontain" style="margin-top: 40px;">
