--- a/Website/vr.html
+++ b/Website/vr.html
@@ -16,7 +16,7 @@
 			});
 		});
 		function Redirect() {
-               window.location="http://localhost/SPACEAPPS/portal.html";
+               window.location="portal.html";
         }
 		$(function() {
 			$(".buttspecial").click(function() {
@@ -31,7 +31,7 @@
 </head>
 <body>
 	<div id="fullwidth" style="height: 65px;">
-		<h1 style="display: inline;"> <a href="http://localhost/SPACEAPPS/index.html"><img id="logo" src="Resources\Images\MMCwordmark.png"\></a></h1>
+		<h1 style="display: inline;"> <a href="index.html"><img id="logo" src="Resources\Images\MMCwordmark.png"\></a></h1>
 	</div>
 	<header id="header1">
 		<h1 class="slogan"><span class="rotate">NASA'S MANILA INFORMATION CENTER, WHERE DREAMERS ARE BORN, AND SCIENTISTS COME TO PLAY, START YOUR MISSION TODAY</span></h1>
