--- a/Website/about.html
+++ b/Website/about.html
@@ -44,7 +44,7 @@
 		<aside id="infospace" style="width: 42.3%;">
 			<p style="margin-top: 150px; font-size: 20px;">Manila Mission Control (MMC) was developed by an inspired group of developers from the Philippines who were interested in helping NASA improve their relations amongst the Filipino people.</p>
 			<br/>
-			<p style="font-size: 20px;">The developers, and NASA, intended MMC to be the "starting point" for budding astronomers within the Philippines. They invisioned it as a "control center" where you can launch your imagination into the heavens above.</p>
+			<p style="font-size: 20px;">The developers, and NASA, intended MMC to be the "starting point" for budding astronomers within the Philippines. They envisioned it as a "control center" where you can launch your imagination into the heavens above.</p>
 			<br/>
 			<p style="font-size: 20px;">In MMC, you can find various NASA resources, as well as other helpful information from NASA to pique your interest in the exploration of the unknown. You can get a first-hand view of what the ISS looks like from the inside in the homepage, and there are other VR videos in the <a href="vr.html" style="color:#1a5dad; text-decoration: none; font-weight: bold;">VR section</a>.</p>
 			<br/>
