--- a/Website/section1.html
+++ b/Website/section1.html
@@ -77,7 +77,7 @@
 			<br/>
 			<p>Feel free to use NASA's satellites to track storms, check weather conditions, see local attractions&mdash;all from the view of space and within the comfort of your own home (or any place where an Internet connection is possible).</p>
 			<br/>
-			<p>Watch real-time updates on the Philippines and in other parts of the world as NASA's satellites take continouous snapshots of the country as they orbit around the world.</p>
+			<p>Watch real-time updates on the Philippines and in other parts of the world as NASA's satellites take continuous snapshots of the country as they orbit around the world.</p>
 			<br/><br/>
 			<button class="contactbutt" onclick="Redirect2()">Check Satellite Feed</button>
 		</div>
@@ -157,7 +157,7 @@
 			<div id="entry" style="float: left">
 				<h6>2</h6>
 				<h5>coefficient</h5>
-				<p>Coefficients are multipliers or factors that measure some properts.</p>
+				<p>Coefficients are multipliers or factors that measure some properties.</p>
 				<img src="Resources/Images/4star.png"\>
 			</div>
 		</div>
