--- a/Website/nasatv.html
+++ b/Website/nasatv.html
@@ -27,7 +27,7 @@
 	</header>
 	<div class="mainbody">
 		<div id="imagecontainer" style="border-right: 1px solid #d6c23e; width: 90%;">
-			<h1>NASA TV Livestream</h1>
+			<h1>NASA TV Live Stream</h1>
 			<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='http://www.ustream.tv/embed/1592587?html5ui' style='border:0'></iframe></div>
 		</div>
 	</div>
