--- a/Website/portal.html
+++ b/Website/portal.html
@@ -25,11 +25,11 @@
 	<header id="header1" style="background: url(Resources/Images/liftoff.jpg); background-attachment: fixed; background-size: cover; height: 600px">
 		<div id="leftcontain" style="margin-top: 40px;">
 			<h1>Pick Your Destination</h1>
-			<p>Greetings, you must be our new recruit! Welcome to NASA's Manila Mission Control! Here is where you'll be making your first and (hopefully) continouous steps towards a greater knowledge of the world around you.</p>
+			<p>Greetings, you must be our new recruit! Welcome to NASA's Manila Mission Control! Here is where you'll be making your first and (hopefully) continuous steps towards a greater knowledge of the world around you.</p>
 			<br/>
 			<p>Feel free to pick from one of the chosen categories below. All sections and/or categories offer a rich and inviting experience so as to not let you get bored easily.</p>
 			<br/>
-			<p>We suggest starting with the dictionary. There you'll find various terminologies that astonauts and other scientists use to describe the world around them. Have a look around and, if you understand the concept better, we highly encourage you to submit your own definition of the term.</p>
+			<p>We suggest starting with the dictionary. There you'll find various terminologies that astronauts and other scientists use to describe the world around them. Have a look around and, if you understand the concept better, we highly encourage you to submit your own definition of the term.</p>
 			<br/>
 			<p>Last but certainly not the least, we cannot recommend you enough how breathtaking our new VR portal is. It contains videos from key NASA personnel and some videos gathered using NASA's various instruments (satellites, weather balloons, etc.) and it offers a rich, virtual reality experience that can be experienced with Google Fiber or by just clicking and dragging the mouse around! No special equipment needed, just a screen and you fan freely watch them at your own leisure and from anywhere in the world.</p>
 		</div>
