Minor code changes that hopefully don't bite me in the ass in the future, please.

--- a/Website/about.html
+++ b/Website/about.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 	<div id="fullwidth" style="height: 65px;">
-		<h1 style="display: inline;"> <a href="index.html"><img id="logo" src="Resources\Images\MMCwordmark.png"\></a></h1>
+		<h1 style="display: inline;"><a href="index.html"><img id="logo" src="Resources\Images\MMCwordmark.png"/></a></h1>
 	</div>
 	<header id="header1">
 		<h1 class="slogan"><span class="rotate">NASA'S MANILA INFORMATION CENTER, WHERE DREAMERS ARE BORN, AND SCIENTISTS COME TO PLAY, START YOUR MISSION TODAY</span></h1>
@@ -38,7 +38,7 @@
 	<div class="mainbody">
 		<div id="imagecontainer" style="width: 43.4%;">
 			<h1>About MMC</h1>
-			<img src="Resources\Images\MMClogo.png"\>
+			<img src="Resources\Images\MMClogo.png"/>
 		</div>
 		<aside id="infospace" style="width: 42.3%;">
 			<p style="margin-top: 150px; font-size: 20px;">Manila Mission Control (MMC) was developed by an inspired group of developers from the Philippines who were interested in helping NASA improve their relations amongst the Filipino people.</p>
@@ -52,7 +52,7 @@
 	</div>
 	<footer>
 		<a href="Resources\Images\NASAlogo.png" target='_blank'>
-			<img src="Resources\Images\NASAlogo.png"\>
+			<img src="Resources\Images\NASAlogo.png"/>
 		</a>
 		<div class="footcontain">
 			<h4>About NASA</h4>
