--- a/Website/index.html
+++ b/Website/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
 	<div id="fullwidth" style="height: 65px;">
-		<h1 style="display: inline;"> <img id="logo" src="Resources\Images\MMCwordmark.png"\></h1>
+		<h1 style="display: inline;"> <img id="logo" src="Resources\Images\MMCwordmark.png"/></h1>
 	</div>
 	<header id="header1">
 		<h1 class="slogan"><span class="rotate">NASA'S MANILA INFORMATION CENTER, WHERE DREAMERS ARE BORN, AND SCIENTISTS COME TO PLAY, START YOUR MISSION TODAY</span></h1>
@@ -44,18 +44,18 @@
 		<div id="imagecontainer">
 			<div id="image1container" class="images" style="padding-bottom: 4.5%">
 				<a href="http://phl-microsat.upd.edu.ph/" target='_blank'>
-					<img src="Resources\Images\diwata-1.jpg"\>
+					<img src="Resources\Images\diwata-1.jpg"/>
 				</a>
 			</div>
 			<div id="otherimages">
 				<div id="image2container" class="images">
 					<a href="http://pcieerd.dost.gov.ph/news/187-philippines-diwata-microsatellite-rising" target='_blank'>
-						<img src="Resources\Images\diwata-2.jpg"\>
+						<img src="Resources\Images\diwata-2.jpg"/>
 					</a>
 				</div>
 				<div id="image3container" class="images">
 					<a href="https://directory.eoportal.org/web/eoportal/satellite-missions/d/diwata-1" target='_blank'>
-						<img src="Resources\Images\diwata-3.jpg"\>
+						<img src="Resources\Images\diwata-3.jpg"/>
 					</a>
 				</div>
 			</div>
@@ -90,28 +90,28 @@
 		<h1>Trending News Articles</h1>
 		<div id="mainarticle">
 			<a href="http://www.rappler.com/nation/86327-philippine-microsatellite-diwata" target='_blank'>
-				<img class="demarticles" src="Resources\Images\Articles\Article1.jpg"\>
+				<img class="demarticles" src="Resources\Images\Articles\Article1.jpg"/>
 			</a>
 		</div>
 		<div id="otherarticles">
 			<div class="leftarticlecontainer">
 				<a href="http://www.livescience.com/58843-astrobiologists-study-amino-acids-in-alien-environments.html" target='_blank'>
-					<img class="demarticles" src="Resources\Images\Articles\Article2.jpg"\>
+					<img class="demarticles" src="Resources\Images\Articles\Article2.jpg"/>
 				</a>
 			</div>
 			<div class="rightarticlecontainer">
 				<a href="http://www.livescience.com/58842-dwarf-planet-deedee-stirs-up-pluto-planethood-debate.html" target='_blank'>
-					<img class="demarticles" src="Resources\Images\Articles\Article3.jpg"\>
+					<img class="demarticles" src="Resources\Images\Articles\Article3.jpg"/>
 				</a>
 			</div>
 			<div class="leftarticlecontainer">
 				<a href="http://www.livescience.com/58821-terraform-mars-asteroid-strike-lake-matthew.html" target='_blank'>
-					<img class="demarticles" src="Resources\Images\Articles\Article4.jpg"\>
+					<img class="demarticles" src="Resources\Images\Articles\Article4.jpg"/>
 				</a>
 			</div>
 			<div class="rightarticlecontainer">
 				<a href="http://www.livescience.com/58746-alien-planet-best-bet-search-for-life.html" target='_blank'>
-					<img class="demarticles" src="Resources\Images\Articles\Article5.jpg"\>
+					<img class="demarticles" src="Resources\Images\Articles\Article5.jpg"/>
 				</a>
 			</div>
 		</div>
@@ -150,19 +150,19 @@
 				<h6>1</h6>
 				<h5>Hybrid Computer</h5>
 				<p>Hybrid computers are generally seen as devices that combine analog and  digital components.</p>
-				<img src="Resources/Images/5star.png"\>
+				<img src="Resources/Images/5star.png"/>
 			</div>
 			<div id="entry" style="float: right">
 				<h6>3</h6>
 				<h5>analog signal</h5>
 				<p>An analog signal is any time-varying and continuous signal whose time-variance quantity acts as an indicator to another time-varying signal.</p>
-				<img src="Resources/Images/4star.png"\>
+				<img src="Resources/Images/4star.png"/>
 			</div>
 			<div id="entry" style="float: left">
 				<h6>2</h6>
 				<h5>coefficient</h5>
 				<p>Coefficients are multipliers or factors that measure some properts.</p>
-				<img src="Resources/Images/4star.png"\>
+				<img src="Resources/Images/4star.png"/>
 			</div>
 		</div>
 	</div>
@@ -172,7 +172,7 @@
 	</header>
 	<footer>
 		<a href="Resources\Images\NASAlogo.png" target='_blank'>
-			<img src="Resources\Images\NASAlogo.png"\>
+			<img src="Resources\Images\NASAlogo.png"/>
 		</a>
 		<div class="footcontain">
 			<h4>About NASA</h4>
