--- a/Website/portal.html
+++ b/Website/portal.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 	<div id="fullwidth" style="height: 65px;">
-		<h1 style="display: inline;"> <a href="index.html"><img id="logo" src="Resources\Images\MMCwordmark.png"\></a></h1>
+		<h1 style="display: inline;"> <a href="index.html"><img id="logo" src="Resources\Images\MMCwordmark.png"/></a></h1>
 	</div>
 	<header id="header1" style="background: url(Resources/Images/liftoff.jpg); background-attachment: fixed; background-size: cover; height: 600px">
 		<div id="leftcontain" style="margin-top: 40px;">
@@ -35,27 +35,27 @@
 	</header>
 	<div class="mainbody" style="margin: 0; padding: 0;">
 		<a href="dictionary.php">
-			<img class="sectionimage leftimage" src="Resources\Images\Sections\Section1.jpg"\>
+			<img class="sectionimage leftimage" src="Resources\Images\Sections\Section1.jpg"/>
 		</a>
 		<a href="satellite.html">
-			<img class="sectionimage right" src="Resources\Images\Sections\Section2.jpg"\>
+			<img class="sectionimage right" src="Resources\Images\Sections\Section2.jpg"/>
 		</a>
 		<a href="https://www.nasa.gov/news/releases/latest/">
-			<img class="sectionimage leftimage" src="Resources\Images\Sections\Section3.jpg"\>
+			<img class="sectionimage leftimage" src="Resources\Images\Sections\Section3.jpg"/>
 		</a>
 		<a href="vr.html">
-			<img class="sectionimage right" src="Resources\Images\Sections\Section4.jpg"\>
+			<img class="sectionimage right" src="Resources\Images\Sections\Section4.jpg"/>
 		</a>
 		<a href="nasatv.html">
-			<img class="sectionimage leftimage" src="Resources\Images\Sections\Section5.jpg"\>
+			<img class="sectionimage leftimage" src="Resources\Images\Sections\Section5.jpg"/>
 		</a>
 		<a href="about.html">
-			<img class="sectionimage right" src="Resources\Images\Sections\Section6.jpg"\>
+			<img class="sectionimage right" src="Resources\Images\Sections\Section6.jpg"/>
 		</a>
 	</div>
 	<footer>
 		<a href="Resources\Images\NASAlogo.png" target='_blank'>
-			<img src="Resources\Images\NASAlogo.png"\>
+			<img src="Resources\Images\NASAlogo.png"/>
 		</a>
 		<div class="footcontain">
 			<h4>About NASA</h4>
